--- a/style.css
+++ b/style.css
@@ -33,10 +33,11 @@ direction: rtl;
 	font-size: 25px ;
 	font-weight: bold ;
 	border: black   solid  5px ;
-	padding: 7px 18px 7px 18px;
+	padding: 7px 10px 7px 10px;
 	border-radius: 5px 5px 5px 5px ;
 	background-color: black;
-	margin:40px  10px 20px 40px ;
+	margin:7px  7px 7px 7px ;
+	
 	margin-bottom:50px;
 }
 
@@ -74,23 +75,48 @@ display: inline-block ;
 }
 /*نسبه */ 
 	.text2{
-		height:1300px;
+		height:auto;
 		background-color:#66cdaa;
+		font-size:45px ;
 		}
 
 /* مناقبة */
 	.text3{
-		height:2300px;
+		height:auto;
 		background-color:#18b491;
 		padding:20px;
+		font-size:45px ;
 		}
+		/*  القصيدة الثانية*/
+	.text7{
+		height:auto;
+		background-color:#18b491;
+		padding:20px;
+		font-size:45px ;
+		}
+		/*المخطوطات*/
+		.text6{
+		height:auto;
+		background-color:#66cdaa;
+		padding:20px;
+		font-size:60px ;
+		}
+		
+			.text8{
+		height:auto;
+		background-color:#66cdaa;
+		padding:20px;
+		font-size:200px ;
+		}
+		
 		
 /* مؤلفاته */
 	.text4{
-		height:9980px;
+		height:auto;
 		background-color:#66cdaa;
 		border:solid 5px #66cdaa;
 		padding:20px;
+		font-size:45px 
 		}
 
 .nav{
@@ -110,10 +136,11 @@ border-radius: 5px 5px 5px 5px ;
 	background-color:#18b491;
 	margin-top:20px;
 	border: solid 5px #18b491;
+	font-size:45px ;
 }
 
 /*اعمالنا*/
-.text1 ,.text2 ,.text3 ,.text4 ,.text5{
+.text1 ,.text2 ,.text3 ,.text4 ,.text5 ,.text 6 ,.text7{
 width :98,5%;
 font-size:45px ;
 font-weight: bold;
