--- a/style.css
+++ b/style.css
@@ -8,8 +8,47 @@ h1{
 font-size:60px;
 }
 
+h2{
+font-size: 40px;
+color: red;
+border: solid 1px white ;
+background-color: white ;
+width: 98% ;
+height: auto;
+}
+
+h3{
+font-size: 50px;
+color: white;
+border: solid 1px #0000ff;
+background-color: #0000ff ;
+width: 980px ;
+height: auto;
+}
+
+/* مؤلفاته */
+	.text4{
+		height:auto;
+		background-color:#66cdaa;
+		border:solid 5px #66cdaa;
+		padding:20px;
+		font-size:12px;
+		font-weight: bold ;
+		}
+/* مؤلفاته */
+	.text9{
+		height:auto;
+		background-color:#66cdaa;
+		border:solid 5px #66cdaa;
+		padding:20px;
+		font-weight: bold ;
+		font-size:14px 	
+		}
+
+
+
 body {
-	background-color: white;
+	background-color: white ;
     color : block ;
 direction: rtl;
 }
@@ -77,7 +116,8 @@ display: inline-block ;
 	.text2{
 		height:auto;
 		background-color:#66cdaa;
-		font-size:45px ;
+		font-size:20px ;
+		font-weight: bold;
 		}
 
 /* مناقبة */
@@ -85,39 +125,44 @@ display: inline-block ;
 		height:auto;
 		background-color:#18b491;
 		padding:20px;
-		font-size:45px ;
+		font-size:20px ;
+		font-weight: bold;
 		}
 		/*  القصيدة الثانية*/
 	.text7{
 		height:auto;
 		background-color:#18b491;
 		padding:20px;
-		font-size:45px ;
+		font-size:20px ;
+		font-weight: bold;
+		
 		}
 		/*المخطوطات*/
 		.text6{
 		height:auto;
-		background-color:#66cdaa;
+		background-color:#18b491;
 		padding:20px;
-		font-size:60px ;
+		font-size:20px ;
+		font-weight: bold;
 		}
 		
 			.text8{
 		height:auto;
 		background-color:#66cdaa;
 		padding:20px;
-		font-size:200px ;
+		font-size:45px ;
+		font-weight: bold;
+		
+
 		}
-		
-		
-/* مؤلفاته */
-	.text4{
+			.text10{
 		height:auto;
 		background-color:#66cdaa;
-		border:solid 5px #66cdaa;
 		padding:20px;
-		font-size:45px 
+		font-size:20px ;
+		font-weight: bold;
 		}
+		
 
 .nav{
 	color: white ;
@@ -136,12 +181,49 @@ border-radius: 5px 5px 5px 5px ;
 	background-color:#18b491;
 	margin-top:20px;
 	border: solid 5px #18b491;
-	font-size:45px ;
+	font-size:20px ;
+	font-weight: bold;
+
 }
 
 /*اعمالنا*/
 .text1 ,.text2 ,.text3 ,.text4 ,.text5 ,.text 6 ,.text7{
 width :98,5%;
-font-size:45px ;
-font-weight: bold;
 	}
+	
+	.menu1 ub lb a{
+	text-decoration: none ;
+	color: white;
+	font-family:"times new  roman", times, serif;
+	font-size: 50px ;
+	font-weight: bold ;
+	border: black   solid  5px ;
+	padding: 5px 5px 5px 5px;
+	border-radius: 5px 5px 5px 5px ;
+	background-color: black;
+	margin:7px  7px 7px 7px ;
+	width:auto;
+	height:auto ;
+	margin-bottom:50px;
+}
+/*
+ub{
+	width :99% ;
+	height: 60px ;
+	padding-top: 5px ;
+	padding: 5px 5px 5px 5px ;
+	border-radius: 5px 5px 5px 5px ;
+	border: solid 1px red ;
+}
+*/
+lb{
+display: inline-block ;
+padding-left:2px ;
+}
+.text11{
+	height:70px;
+	background-color:#18b491;
+	border: solid 5px #18b491;
+	font-size:45px ;
+}
+	
