--- a/style.css
+++ b/style.css
@@ -8,6 +8,14 @@ h1{
 font-size:60px;
 }
 
+button{
+width=100px;
+height:=40px ;
+font-size:30px ;
+}
+
+
+
 h2{
 font-size: 40px;
 color: red;
@@ -128,6 +136,13 @@ display: inline-block ;
 		font-size:40px ;
 		font-weight: bold;
 		}
+			.text12{
+		height:auto;
+		background-color:#18b491;
+		padding:20px;
+		font-size:40px ;
+		font-weight: bold;
+		}
 		/*  القصيدة الثانية*/
 	.text7{
 		height:auto;
@@ -226,4 +241,38 @@ padding-left:2px ;
 	border: solid 5px #18b491;
 	font-size:45px ;
 }
+
+input[type="text"],textarea, input[type="email"]{
+text-align: center ;
+background-color:white ;
+width:80%;
+height:50px;
+border: 1px solid  #999;
+border-radius: 15px ;
+
+margin: 5px 180px   ;
+
+direction: rtl ;
+
+padding:0 18px ;
+
+font-size:15px ;
+font-weight: bold ;
+}
+
+textarea {
+height: 400px ;
+}
+
+input[type="submit"]{
+text-align: center;
+font-weight: bold;
+font-size:30px ;
+width:500px ;
+height:50px;
+margin-right:200px ;
+}
+
+
+
 	
